--- a/src/front/router.css
+++ b/src/front/router.css
@@ -3,10 +3,6 @@
   min-height: 100%;
 }
 
-.content {
-  padding: 0 50px;
-}
-
 .content-inner {
   background: #fff;
   padding: 24px;
@@ -14,4 +10,10 @@
 
 .footer {
   text-align: center;
+}
+
+@media screen and (min-width: 600px) {
+  .content {
+    padding: 0 50px;
+  }
 }
