--- a/src/common/components/Output.css
+++ b/src/common/components/Output.css
@@ -1,7 +1,7 @@
 .output {
   border: 1px solid #eee;
   border-radius: 4px;
-  color: rgba(0, 0, 0, .65);
+  color: rgba(0, 0, 0, 0.65);
   font-size: 14px;
   padding: 8px 15px;
   overflow: auto;
